--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Url shortener",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "TapanManu",
